--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,6 +52,28 @@ body {
   overflow: hidden;
 }
 
+.button {
+  box-sizing: border-box;
+  padding: 12px 32px;
+  border: 4px solid rgba(252, 252, 252, 0.4);
+  border-radius: 26px;
+  background-color: #fcfcfc;
+  background-clip: padding-box;
+  box-shadow: 0 4px 12px rgba(45, 52, 64, 0.1);
+}
+
+.red-button {
+  background-color: #ff2f64;
+  font-weight: 700;
+  line-height: 20px;
+  color: #fcfcfc;
+  border-radius: 26px;
+  border: 4px solid rgba(255, 47, 100, 0.3);
+  box-shadow: 0 4px 12px rgba(45, 52, 64, 0.1);
+  box-sizing: border-box;
+  padding: 12px 32px;
+}
+
 .content-wrapper {
   width: 1170px;
   margin: 0 auto;
@@ -196,14 +218,17 @@ body {
   gap: 30px;
 }
 
-.popular-list-item {
+.product-list-item {
   text-align: center;
   background-color: #fcfcfc;
   border-radius: 8px;
+  padding: 24px 40px;
+  box-sizing: border-box;
 }
 
 .icecream-name {
   margin: 0;
+  margin-bottom: 8px;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -212,6 +237,29 @@ body {
 
 .icecream-text {
   margin: 0;
+  margin-bottom: 16px;
+}
+
+.product-price {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.price-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.add-to-cart {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  background-color: #ff2f64;
+  border-color: transparent;
+  display: flex;
+  align-items: center;
 }
 
 /* advantages */
@@ -292,6 +340,14 @@ body {
   margin-bottom: 44px;
 }
 
+.email-input {
+  width: 332px;
+}
+
+.button-newsletter {
+  width: 152px;
+}
+
 /* delivery */
 
 .delivery-wrapper {
@@ -308,6 +364,10 @@ body {
   margin-bottom: 80px;
 }
 
+.delivery-content {
+  align-self: center;
+}
+
 .delivery-tittle {
   font-size: 32px;
 }
@@ -320,18 +380,61 @@ body {
   background-color: #fcfcfc;
   box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
   border-radius: 8px;
+  padding: 40px;
 }
 
-.delivery-label {
-  font-weight: 700;
-  line-height: 22px;
+.delivery-form-text {
+  margin: 0;
+  margin-bottom: 32px;
 }
 
-.red-button {
-  background-color: #ff2f64;
+.delivery-input-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 20px;
+}
+
+.delivery-form-address {
+  grid-column: 1 / -1;
+}
+
+.delivery-form-label {
+  display: flex;
+  flex-direction: column;
   font-weight: 700;
+  font-size: 16px;
   line-height: 20px;
-  color: #fcfcfc;
+  color: #2d3440;
+}
+
+.delivery-form-button {
+  grid-column: 1 / -1;
+  justify-self: center;
+  width: 152px;
+}
+
+.delivery-input {
+  box-sizing: border-box;
+  padding: 14px 16px;
+  color: #b9b9b9;
+  border: 1px solid #b9b9b9;
+  border-radius: 4px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.delivery-input-date {
+  width: 117px;
+}
+
+.delivery-input-tel {
+  width: 287px;
+}
+
+.delivery-input-address {
+  width: 420px;
 }
 
 .feedback-wrapper {
@@ -350,6 +453,7 @@ body {
   background-color: #fcfcfc;
   box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
   width: 343px;
+  box-sizing: border-box;
 }
 
 .feedback-tittle,
@@ -359,6 +463,10 @@ body {
 .phone-text {
   font-style: normal;
   margin: 0;
+}
+
+.feedback-tittle {
+  margin-bottom: 12px;
 }
 
 .feedback-text,
@@ -372,19 +480,32 @@ body {
 .shedule-text {
   font-size: 14px;
   line-height: 20px;
+  margin-bottom: 32px;
+}
+
+.feedback-text {
+  margin-bottom: 24px;
+}
+
+.phone-text {
+  margin-bottom: 12px;
 }
 
 .feedback-link {
   text-decoration: none;
+  display: block;
+  width: 250px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .page-footer {
   width: 1170px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 44px 0;
-    margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 44px 0;
+  margin: 0 auto;
 }
 
 .footer-about-list {
@@ -441,6 +562,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 915px;
+  align-items: center;
 }
 
 .catalog-filter-list {
@@ -470,12 +592,14 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
+  text-align: center;
   color: #2d3440;
   width: 185px;
-  padding: 8px;
+  padding: 8px 10px;
   box-sizing: border-box;
-  display: block;
-  border: none;
+  background: rgba(252, 252, 252, 0.3);
+  border: 2px solid #FCFCFC;
+  height: 36px;
 }
 
 .product-wrapper {
