--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,6 +90,7 @@ body[data-color='yellow'] {
   border-radius: 30px;
   padding: 8px 16px;
   transition: background-color 300ms ease-out;
+  cursor: pointer;
 }
 
 .header-link:hover{
@@ -143,7 +144,7 @@ body[data-color='yellow'] {
   text-decoration: none;
 }
 
-.contacts-phone {
+.navigation-link-phone {
   font-weight: 700;
   line-height: 20px;
   color: #2d3440;
@@ -1015,6 +1016,7 @@ body[data-color='yellow'] {
 
 .catalog-filter-item:hover .control-input[type="radio"]:hover + .control-mark::before {
   box-shadow: inset 0 0 0 1.3px #fcfcfc;
+  background-color: #fcfcfc;
 }
 
 .catalog-filter-item:hover .control-input[type="radio"]:disabled:hover + .control-mark::before {
@@ -1051,15 +1053,15 @@ body[data-color='yellow'] {
   background-image: url('../images/catalog/checkbox-check.svg');
 }
 
-.control-input[type="checkbox"]:focus + .control-checkbox::before {
+.catalog-filter-item:focus + .control-checkbox::before {
   filter: invert(1) contrast(300%);
 }
 
-.catalog-form-item:hover .control-checkbox::before {
+.catalog-filter-item:hover .control-checkbox::before {
   filter: invert(1) contrast(300%);
 }
 
-.catalog-form-item:hover .control-input[type="checkbox"]:disabled + .control-checkbox::before {
+.control-input[type="checkbox"]:hover .control-input[type="checkbox"]:disabled + .control-checkbox::before {
   filter: none;
 }
 
@@ -1076,36 +1078,39 @@ body[data-color='yellow'] {
   text-align: center;
   color: #2d3440;
   min-width: 185px;
-  padding: 10px 15px;
+  padding: 7px 15px;
   box-sizing: border-box;
   background: rgba(252, 252, 252, 0.3);
-  border: 2px solid #FCFCFC;
+  border: none;
+  box-shadow: 0 0 0 2px #fcfcfc;
   align-self: flex-end;
   cursor: pointer;
 }
 
 .catalog-filter-submit:focus {
   background-color: #FDD5DF;
-  border: 2px solid #2D3440;
+  box-shadow: 0 0 0 2px #2d3440;
   color: #2D3440;
 }
 
 .catalog-filter-submit:hover {
   background-color: #FCFCFC;
-  border: 2px solid #FEC7D5;
+  box-shadow: 0 0 0 2px #fec7d5;
   color: #2D3440;
 }
 
 .catalog-filter-submit:active {
   background-color: #FDD5DF;
-  border: 2px solid #FDD5DF;
+  box-shadow: 0 0 0 2px #FDD5DF;
   color: #2D3440;
 }
 
 .catalog-filter-submit:disabled {
   background-color: #FDB5C7;
-  border: 2px solid #FDCEDA;
+  box-shadow: 0 0 0 2px #FDCEDA;
   color: #AA7E8F;
+  pointer-events: none;
+
 }
 
 
@@ -1259,7 +1264,7 @@ body[data-color='yellow'] {
 .pagination-button-prev {
   left: 0;
   transform: translate(0, -50%) rotate(180deg);
-  opacity: .3;
+  opacity: 0.3;
 }
 
 .pagination-button-next {
@@ -1277,8 +1282,8 @@ body[data-color='yellow'] {
 }
 
 .submenu-list:hover .navigation-link {
-  background: #FF4A78;
-  color: #FCFCFC;
+  background: #ff4a78;
+  color: #fcfcfc;
 }
 
 .navigation-link-submenu {
@@ -1345,13 +1350,215 @@ body[data-color='yellow'] {
   background-color: #FF7799;
 }
 
-.header-popap {
-  display: none;
+.submenu-item:focus-within {
+  outline: none;
+  background-color: #ff4a78;
 }
+
+.submenu-item-link:focus {
+  outline: none;
+  color: #fcfcfc;
+}
+
+.navigation-item {
+  position: relative;
+}
+
 
 .header-button {
   border: none;
   box-sizing: border-box;
   background-color: rgba(252, 252, 252, 0.3);
   display: flex;
+}
+
+.header-button:hover {
+  background-color: #FF4A78;
+}
+
+.header-button:focus {
+  outline: none;
+  background-color: #ff2f64;
+}
+
+.navigation-link-search {
+  display: block;
+  padding: 7px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+.header-popap {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  opacity: 0;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  visibility: hidden;
+  overflow: hidden;
+  transition: all 100ms ease-out;
+}
+
+.header-popap-tittle {
+  margin: 0;
+  margin-bottom: 32px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  color: #2d3440;
+}
+
+.header-popap-search {
+  top: 36px;
+  width: 356px;
+  padding: 24px 16px;
+}
+
+.header-popap-input {
+  box-sizing: border-box;
+  width: 324px;
+  padding: 14px 16px;
+  border: 1px solid #b9b9b9;
+  border-radius: 4px;
+}
+
+.search-input {
+  padding-right: 36px;
+  background-repeat: no-repeat;
+  background-position: center right 16px;
+}
+
+.search-input:not(:placeholder-shown) {
+  background-image: url("../images/input-clear.svg");
+}
+
+.navigation-item:hover .header-popap {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+}
+
+.header-popap-input:focus {
+  outline: none;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.header-popap-auth {
+  padding: 48px;
+  padding-bottom: 52px;
+  width: 420px;
+}
+
+.header-popap-form-wrapper {
+  margin-bottom: 32px;
+}
+
+.popap-button {
+  margin-right: 23px;
+}
+
+.header-popap-form-buttons {
+  display: flex;
+}
+
+.header-popap-form-link {
+  color: #2d3440;
+  text-decoration: none;
+  border-bottom: 1px solid #2d3440;
+  display: block;
+  margin: 0;
+  margin-bottom: 4px;
+  width: fit-content;
+}
+
+.header-popap-form-link:last-of-type {
+  margin-bottom: 0;
+}
+
+.popap-email-input {
+  margin-bottom: 16px;
+}
+
+.header-popap-cart {
+  width: 441px;
+  padding: 48px;
+}
+
+.header-popap-list {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 32px;
+}
+
+.header-popap-item {
+  margin-bottom: 24px;
+}
+
+.header-popap-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.header-popap-item {
+  display: flex;
+  align-items: center;
+}
+
+.basket-product-tittle {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+  color: #2d3440;
+}
+
+.basket-product-info {
+  margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #b9b9b9;
+}
+
+.basket-product-image {
+  margin-right: 16px;
+}
+
+.basket-product-content {
+  margin-right: auto;
+  width: 92px;
+}
+
+.basket-product-price {
+  margin: 0;
+  margin-right: auto;
+  font-size: 18px;
+  color: #2d3440;
+  font-weight: 700;
+}
+
+.header-popap-price {
+  margin: 0;
+}
+
+.header-popap-bottom {
+  border-top: 1px solid #E7E7E7;
+  padding-top: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.basket-product-delete {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 22px;
+  height: 22px;
+  border: none;
+  background-color: transparent;
 }
